overflow banner fix

--- a/index.html
+++ b/index.html
@@ -328,7 +328,8 @@
         </div>
         </section>
     -->
-    <div class="patrocinadores p-3 pb-6">
+    
+    <div class="patrocinadores p-3 pb-6 d-none">
         <br><br>
         <section id="patrocinadores" class="text-center container patrocinadores py-5">
             <h2 class="py-5 dividered dividered-center dividered-danger section-title">Patrocinadores</h2>
