Team - Added Carlitos

--- a/equipo.html
+++ b/equipo.html
@@ -133,15 +133,14 @@
             <div class="col-sm">
                 <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
                     <div class="profile-photo shadow">
-                        <img src="team/unknown.jpg" alt="profile Photo" class="img-fluid">
+                        <img src="team/carlosalonso.jpeg" alt="profile Photo" class="img-fluid">
                     </div>
 
                     <h3 class="pt-3 text-dark">Carlos Alonso <img src="seek.png" style="height: 6%; width: 6%;"></h3>
                     <p class="text-secondary">Organizador</p>
                     <div class="social-links">
                         <ul>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/carlos-alonso-arranz-152ab7224/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
