Team update + sponsors + prizes conditionss

--- a/equipo.html
+++ b/equipo.html
@@ -161,24 +161,24 @@
                     </div>
                 </div>
             </div>
-            <!--
+            
             <div class="col-sm">
                 <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
                     <div class="profile-photo shadow">
-                        <img src="team/unknown.jpg" alt="profile Photo" class="img-fluid">
+                        <img src="team/cristobalsaraiba.jpg" alt="profile Photo" class="img-fluid">
                     </div>
 
-                    <h3 class="pt-3 text-dark">Nombre Apellido <img src="librelab.png" style="height: 7%; width: 7%;">
+                    <h3 class="pt-3 text-dark">Cristóbal Saraiba <img src="librelab.png" style="height: 8%; width: 8%;">
                     </h3>
                     <p class="text-secondary">Organizador</p>
                     <div class="social-links">
                         <ul>
-                            <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/csaraiba/"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
             </div>
+            <!--
             <div class="col-sm">
                 <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
                     <div class="profile-photo shadow">
@@ -326,15 +326,14 @@
                 <div class="col-sm">
                     <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
                         <div class="profile-photo shadow">
-                            <img src="team/unknown.jpg" alt="profile Photo" class="img-fluid">
+                            <img src="team/alejandrogallego.jpg" alt="profile Photo" class="img-fluid">
                         </div>
 
-                        <h3 class="pt-3 text-dark">Nombre Apellido</h3>
-                        <p class="text-secondary">Rol</p>
+                        <h3 class="pt-3 text-dark">Alejandro Gallego</h3>
+                        <p class="text-secondary">CTF</p>
                         <div class="social-links">
                             <ul>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/alejandro-gallego-sanchez-078253210"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
