--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
             </div>
         </article>
     </section>
-    <!-- TODO: wait for approval
+    
     <section class="premios text-center py-6">
-        <h2 class="dividered dividered-center dividered-danger section-title text-white">Premios</h2>
+        <h2 class="dividered dividered-center dividered-danger section-title text-white">Premios<span class="asterisco">*</span></h2>
         <br><br>
         <div class="container text-center">
                 <div class="prizes-container">
@@ -351,18 +351,20 @@
                      </div>
                 </div>
                     </div>
+                    
                 </div>
+                <br><br>
+                <span class="minitext my-10">* Premio para cada integrante del equipo. Los premios pueden estar sujetos a cambios.</span>
         </div>
         </section>
-    -->
 
-    <div class="patrocinadores p-3 pb-6 d-none">
+    <div class="patrocinadores p-3 pb-6">
         <br><br>
         <section id="patrocinadores" class="text-center container patrocinadores py-5">
             <h2 class="py-5 dividered dividered-center dividered-danger section-title">Patrocinadores</h2>
 
-            <h3 class="my-5 title">PATROCINADORES PLATINO</h3>
-            <article class="text-center row container">
+            <h3 class="my-5 title  d-none">PATROCINADORES PLATINO</h3>
+            <article class="text-center row container  d-none">
                 <div class="container col-sm-12 col-md-6 "><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
@@ -370,30 +372,30 @@
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
             </article>
-            <div class="container w-75">
+            <div class="container w-75  d-none">
                 <div class="dotted py-5"></div>
             </div>
             <h3 class="my-5 title">PATROCINADORES ORO</h3>
-            <article class="text-center row container">
-                <div class="container col-6 col-md-3"><img class="w-75"
-                        src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
+            <article class="text-center row container align-middle">
+                <div class="container col-6 col-md-3 "><img class="w-45"
+                        src="sponsors/ernst-young-ey-logo.png">
                 </div>
                 <div class="container col-6 col-md-3 "><img class="w-75"
-                        src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
+                        src="sponsors/HackBySecurity.png">
                 </div>
-                <div class="container col-6 col-md-3 mt-5 mt-md-0"><img class="w-75"
-                        src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
+                <div class="container col-6 col-md-3 mt-5 mt-md-0"><br><img class="w-75"
+                        src="sponsors/hackrocks.svg">
                 </div>
-                <div class="container col-6 col-md-3 mt-5 mt-md-0 "><img class="w-75"
+                <div class="container col-6 col-md-3 mt-5 mt-md-0  d-none"><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
             </article>
-            <div class="container w-75">
+            <div class="container w-75  d-none">
                 <div class="dotted py-5"></div>
             </div>
 
-            <h3 class="my-5 title">PATROCINADORES PLATA</h3>
-            <article class="text-center row container ">
+            <h3 class="my-5 title  d-none">PATROCINADORES PLATA</h3>
+            <article class="text-center row container  d-none">
                 <div class="container col-4  col-md-2 "><img class="w-75"
                         src="images/471222f913b0cf4b8a0ed75f755d36b2a733f840267e38158109c68313d49510ae2aec886070acc0603a45680c9f39985c7b8c70b0750c16a49d74_1280.png">
                 </div>
