--- a/equipo.html
+++ b/equipo.html
@@ -341,15 +341,15 @@
                 <div class="col-sm">
                     <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
                         <div class="profile-photo shadow">
-                            <img src="team/unknown.jpg" alt="profile Photo" class="img-fluid">
+                            <img src="team/silviadefrancisco.jpeg" alt="profile Photo" class="img-fluid">
                         </div>
 
-                        <h3 class="pt-3 text-dark">Nombre Apellido</h3>
-                        <p class="text-secondary">Rol</p>
+                        <h3 class="pt-3 text-dark">Silvia de Francisco</h3>
+                        <p class="text-secondary">Voluntaria</p>
                         <div class="social-links">
                             <ul>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://twitter.com/SilviadeFr"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/silvia-de-francisco-gil-b96aa9128/"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -357,15 +357,14 @@
                 <div class="col-sm">
                     <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
                         <div class="profile-photo shadow">
-                            <img src="team/unknown.jpg" alt="profile Photo" class="img-fluid">
+                            <img src="team/jordigil.png" alt="profile Photo" class="img-fluid">
                         </div>
 
-                        <h3 class="pt-3 text-dark">Nombre Apellido</h3>
-                        <p class="text-secondary">Rol</p>
+                        <h3 class="pt-3 text-dark">Jordi Gil</h3>
+                        <p class="text-secondary">Voluntario</p>
                         <div class="social-links">
                             <ul>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                                <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/dinshot"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
