--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </ul>
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item px-2">
-                        <a class="nav-link text-white navbar-title" href="#">INSCRIPCIÓN</a>
+                        <a class="nav-link text-white navbar-title" href="https://seeknhack.hackrocks.com/" target="_blank">INSCRIPCIÓN</a>
                     </li>
                 </ul>
 
@@ -123,7 +123,7 @@
             <div class="container col-12 col-xl-6 text-xl-start text-center align-middle d-inline  ">
                 <h1>CTF <span style="color:var(--bs-danger); font: inherit;">UNI</span></h1>
                 <h3 class="desc">CTF universitario de Madrid</h3>
-                <button class="btn bg-danger text-white rounded-0 mt-3 navbar-title px-4">PRÓXIMAMENTE</button>
+                <button class="btn bg-danger text-white rounded-0 mt-3 navbar-title px-4"><a class="text-white navbar-title inscripcion-link" href="https://seeknhack.hackrocks.com/" target="_blank">INSCRIPCIÓN</a></button>
             </div>
             <div class=" container col-12 col-xl-6 text-center align-middle">
                 <img src="CTFUni.png" class="p-0 p-md-5 text-center" alt="...">
