fix hackrocks logo

--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
                         src="sponsors/ernst-young-ey-logo.png">
                 </div>
                 <div class="container col-6 col-md-3 "><img class="w-75"
-                        src="sponsors/HackBySecurity.png">
+                        src="sponsors/HackBySecurity.png" style="filter: brightness(0);">
                 </div>
                 <div class="container col-6 col-md-3 mt-5 mt-md-0"><br><img class="w-75"
                         src="sponsors/hackrocks.svg">
