--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         </div>
     </section>
-    <section class="requisitos text-center p-3 pb-6">
+    <section id="requisitos" class="requisitos text-center p-3 pb-6">
         <div class="container">
             <br><br>
             <h2 class="my-10 dividered dividered-center dividered-danger section-title">Requisitos</h2>
@@ -206,7 +206,7 @@
                                 26
                                 años,
                                 ambos inclusive, en
-                                el momento de realizar la competición.
+                                el momento de realizar la competición. Las personas que tengan 17 años y se acaben de matricular para este curso, también podrán participar.
                             </p>
                         </div>
                     </aside>
