--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                                 26
                                 años,
                                 ambos inclusive, en
-                                el momento de realizar la competición. Las personas que tengan 17 años y se acaben de matricular para este curso, también podrán participar.
+                                el momento de realizar la competición.
                             </p>
                         </div>
                     </aside>
