--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     
                 </div>
                 <br><br>
-                <span class="minitext my-10">* Premio para cada integrante del equipo. Los premios pueden estar sujetos a cambios.</span>
+                <span class="minitext text-white text-small my-10">* Premio para cada integrante del equipo. Los premios pueden estar sujetos a cambios.</span>
         </div>
         </section>
 
