Rollback + Fix errata FAQ

--- a/index.html
+++ b/index.html
@@ -354,7 +354,7 @@
                     
                 </div>
                 <br><br>
-                <span class="minitext text-white text-small my-10">* Premio para cada integrante del equipo. Los premios pueden estar sujetos a cambios.</span>
+                <span class="minitext my-10">* Premio para cada integrante del equipo. Los premios pueden estar sujetos a cambios.</span>
         </div>
         </section>
 
@@ -476,10 +476,7 @@
                                 </div>
                                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree"
                                     data-parent="#accordion">
-                                    <div class="card-body faq-card-body"> Para hacer la competición más interesante,
-                                        hemos decidio que cada equipo solamente pueda representar una universidad. Por
-                                        ello, como máximo puede haber un miembro de otra universidad en el equipo,
-                                        independientemente de que el equipo esté formado por 3 o 4 miembros.</div>
+                                    <div class="card-body faq-card-body"> Para hacer la competición más interesante, hemos decidido que cada equipo solamente pueda representar a una universidad. Por ello, como máximo, puede haber un miembro de otra universidad en el equipo, tanto si el equipo está formado por 3 o 4 miembros.</div>
                                 </div>
                             </div>
                         </div>
