--- a/equipo.html
+++ b/equipo.html
@@ -200,7 +200,7 @@
         </div>
     </section>
 
-    <section id="voluntarios" style="background-color: #f5f5f5; height: 130vh;">
+    <section id="voluntarios" style="background-color: #f5f5f5; ">
         <div id="fila 1" class="pt-4">
             <div class="row" style="padding: 0% 10% ;">
                 <div class="col-sm">
@@ -290,7 +290,7 @@
         </div>
         
 
-        <div id="fila 2">
+        <div id="fila-2">
             <div class="row" style="padding: 0% 10% ;">
                 <div class="col-sm">
                     <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
@@ -375,7 +375,7 @@
             </div>
         </div>
 
-        <div id="fila 3">
+        <div id="fila-3">
             <div class="row" style="padding: 0% 10% ;">
                 <div class="col-sm">
                     <!--
