--- a/equipo.html
+++ b/equipo.html
@@ -406,8 +406,7 @@
                         <p class="text-secondary">Voluntario</p>
                         <div class="social-links">
                             <ul>
-                                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                                <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                                <li><a href="https://www.linkedin.com/in/devpgsv/"><i class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
