--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
             <article class="text-center row container align-middle">
                 
                 <div class="container col-6 col-md-3"><br><img class="w-75"
-                    src="sponsors/hackbysecurity.png" style="filter: brightness(0)">
+                    src="sponsors/HackBySecurity.png" style="filter: brightness(0)">
                 </div>
                 <div class="container col-6 col-md-3"><br><img class="w-75"
                     src="sponsors/accenture.png">
@@ -388,7 +388,7 @@
                     src="sponsors/hackrocks.png">
                 </div>
                 <div class="container col-6 col-md-3"><br><img class="w-75"
-                    src="sponsors/ey.png">
+                    src="sponsors/EY.png">
                 </div>
                 
             </article>
