--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <meta name="twitter:title" content="CTFUniversitario">
     <meta name="twitter:description"
         content="Competición presencial de tipo Capture The Flag entre las universidades de la Comunidad de Madrid.">
-    <meta name="twitter:image" content="https://i.imgur.com/NUAt6RH.jpeg">
+    <meta name="twitter:image" content="https://seeknhack.es/ctfuniversitario/CTFUni.png">
     <meta name="twitter:site" content="@seeknhack">
     <meta name="twitter:creator" content="@seeknhack">
 </head>
