horario + team update

--- a/equipo.html
+++ b/equipo.html
@@ -369,6 +369,27 @@
                 <div class="col-sm">
                     <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
                         <div class="profile-photo shadow">
+                            <img src="team/marcozucchi.jpg" alt="profile Photo" class="img-fluid">
+                        </div>
+
+                        <h3 class="pt-3 text-dark">Marco Zucchi</h3>
+                        <p class="text-secondary">CTF</p>
+                        <div class="social-links">
+                            <ul>
+                                <li><a href="https://www.linkedin.com/in/marco-zucchi-541176242/"><i
+                                            class="fa fa-linkedin"></i></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div id="fila-3">
+            <div class="row" style="padding: 0% 10% ;">
+                <div class="col-sm">
+                    <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
+                        <div class="profile-photo shadow">
                             <img src="team/patriciacifuentes.jpg" alt="profile Photo" class="img-fluid">
                         </div>
 
@@ -381,29 +402,6 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-            </div>
-        </div>
-
-        <div id="fila-3">
-            <div class="row" style="padding: 0% 10% ;">
-                <div class="col-sm">
-                    <!--
-                    <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
-                        <div class="profile-photo shadow">
-                            <img src="team/unknown.jpg" alt="profile Photo" class="img-fluid">
-                        </div>
-
-                        <h3 class="pt-3 text-dark">Nombre apellido</h3>
-                        <p class="text-secondary">Rol</p>
-                        <div class="social-links">
-                            <ul>
-                                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                                <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-                            </ul>
-                        </div>
-                    </div>
-                    -->
                 </div>
                 <div class="col-sm">
 
