--- a/index.html
+++ b/index.html
@@ -254,6 +254,31 @@
             </article>
         </div>
     </section>
+
+    <section id="schedule" class="container text-center p-3 pb-6 schedule">
+        <h2 class="my-5 dividered dividered-center dividered-danger section-title">Horario</h2>
+        <div class="horario">
+            <table>
+              <tr>
+                <td>10:00</td>
+                <td>11:00</td>
+                <td>15:00</td>
+                <td>17:00</td>
+                <td>17:15</td>
+                <td>18:00</td>
+              </tr>
+              <tr>
+                <td>Bienvenida y presentación</td>
+                <td>CTF 🚩</td>
+                <td>Comida</td>
+                <td>Entrega de premios</td>
+                <td>Resolución de retos</td>
+                <td>Networking 🍻</td>
+              </tr>
+            </table>
+            </div> 
+    </section>
+
     <section id="ubicacion" class="container text-center p-3 pb-6">
         <h2 class="my-5 dividered dividered-center dividered-danger section-title">Ubicación</h2>
         <article class="text-center row container">
