marina cambio roles

--- a/equipo.html
+++ b/equipo.html
@@ -356,7 +356,7 @@
                         </div>
 
                         <h3 class="pt-3 text-dark">Marina Villalta</h3>
-                        <p class="text-secondary">CTF</p>
+                        <p class="text-secondary">Gestión y CTF</p>
                         <div class="social-links">
                             <ul>
                                 <li><a href="https://www.linkedin.com/in/marinavillalta/"><i
