tem member added

--- a/equipo.html
+++ b/equipo.html
@@ -454,22 +454,23 @@
                     </div>
                 </div>
                 <div class="col-sm">
-                    <!--
+
                     <div class="profile-card text-center shadow bg-light p-4 my-5 rounded-3">
                         <div class="profile-photo shadow">
-                            <img src="team/unknown.jpg" alt="profile Photo" class="img-fluid">
+                            <img src="team/juanpablobernal.jpg" alt="profile Photo" class="img-fluid">
                         </div>
 
-                        <h3 class="pt-3 text-dark">Nombre apellido</h3>
-                        <p class="text-secondary">Rol</p>
+                        <h3 class="pt-3 text-dark">Juan Pablo Bernal</h3>
+                        <p class="text-secondary">Voluntario</p>
                         <div class="social-links">
                             <ul>
-                                <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                                <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                                <!-- <li><a href=""><i class="fa fa-twitter"></i></a></li> -->
+                                <li><a href="https://www.linkedin.com/in/juan-pablo-bernal-guti%C3%A9rrez-32535a184/"><i
+                                            class="fa fa-linkedin"></i></a></li>
                             </ul>
                         </div>
                     </div>
-                    -->
+
                 </div>
             </div>
         </div>
