--- a/index.html
+++ b/index.html
@@ -257,35 +257,38 @@
         </div>
     </section>
 
-    <!-- <section id="schedule" class="container text-center p-3 pb-6 schedule">
+    <section id="schedule" class="container text-center p-3 pb-6 schedule">
         <h2 class="my-5 dividered dividered-center dividered-danger section-title">Horario</h2>
-        <div class="row horario">
-            <div class="col-sm-1 col-12 text-center horario">
-                <span>00:00</span>
-                <span>Bienvenida</span>
-            </div>
-        </div>
         <div class="horario">
-            <table>
-                <tr>
-                    <td>10:00</td>
-                    <td>11:00</td>
-                    <td>15:00</td>
-                    <td>17:00</td>
-                    <td>17:15</td>
-                    <td>18:00</td>
-                </tr>
-                <tr>
-                    <td>Bienvenida y presentación</td>
-                    <td>CTF 🚩</td>
-                    <td>Comida</td>
-                    <td>Entrega de premios</td>
-                    <td>Resolución de retos</td>
-                    <td>Networking 🍻</td>
-                </tr>
-            </table>
+            <div class="row">
+                <div class="col my-3">
+                    <span class="time">10:00</span><br>
+                    <span class="event">Bienvenida y presentación</span>
+                </div>
+                <div class="col my-3">
+                    <span class="time">11:00</span><br>
+                    <span class="event">CTF 🚩</span>
+                </div>
+                <div class="col my-3">
+                    <span class="time">15:00</span><br>
+                    <span class="event">Comida y empresas</span>
+                </div>
+                <div class="col my-3">
+                    <span class="time">17:00</span><br>
+                    <span class="event">Entrega de premios</span>
+                </div>
+                <div class="col my-3">
+                    <span class="time">17:20</span><br>
+                    <span class="event">Resolución de retos</span>
+                </div>
+                <div class="col my-3">
+                    <span class="time">18:00</span><br>
+                    <span class="event">Networking 🍻</span>
+                </div>
+            </div>
+    
         </div>
-    </section> -->
+    </section>
 
     <section id="ubicacion" class="container text-center p-3 pb-6">
         <h2 class="my-5 dividered dividered-center dividered-danger section-title">Ubicación</h2>
